Update tests, add TextToSpeechController, and upgrade Gradle
Updated the OpenAIServiceTest to better articulate technical terminologies for TTS handling, and improved pricing related commentary for better clarity. Gradle version was upgraded from 8.2.1 to 8.5 in the properties file. Additionally, a new TextToSpeechController was introduced for managing text-to-speech conversions. Java source compatibility level was also raised in 'build.gradle'.